# advent-of-code

./: README.md
2019/: .gitignore  Cargo.toml  README.md
2019/src/: day_1.rs  day_10.rs  day_17.rs  day_2.rs  day_21.rs  day_22.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  intcode.rs
2020/: README.md  package.json  runner.js
2020/src/day_1/: part_1.js  part_2.js
2020/src/day_10/: input.txt  part_1.js  part_2.js
2020/src/day_11/: part_1.js  part_2.js
2020/src/day_12/: part_1.js  part_2.js
2020/src/day_13/: part_1.js  part_2.js
2020/src/day_2/: part_1.js  part_2.js
2020/src/day_3/: part_1.js  part_2.js
2020/src/day_4/: part_1.js  part_2.js
2020/src/day_5/: part_1.js  part_2.js
2020/src/day_6/: part_1.js  part_2.js
2020/src/day_7/: part_1.js  part_2.js
2020/src/day_8/: part_1.js  part_2.js
2020/src/day_9/: part_1.js  part_2.js
2021/: Package.swift
2021/src/: main.ts
2021/src/days/: day_1.ts  day_10.ts  day_11.ts  day_2.ts  day_3.ts  day_4.ts  day_6.ts  day_7.ts  day_8.ts  day_9.ts
2022/: README.md  package.json
2022/src/: lib.ts  main.ts
2022/src/days/: day_1.ts
2022/tropic-lang/: Cargo.toml
2022/tropic-lang/examples/: example.tro
2022/tropic-lang/src/: eval.rs  lexer.rs  main.rs
